--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.4.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.11.0"
   },
   "devDependencies": {
     "prisma": "^5.4.2"
