add get product by id middleware

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ DATABASE_URL="mysql://root:sk8rboil007@localhost:3306/record_of_music_shop"
 JWT_SECRET_KEY=qwerty17xsdfg22
 JWT_EXPIRE_DATE=7d
 
+#CLOUDINARY
+CLOUDINARY_NAME=dfhvfmgdv
+CLOUDINARY_API_KEY=553569275811331
+CLOUDINARY_SECRET_KEY=Xhse_hSFxHPKkh-8c9ScPl06azE
+
